form label fix color contrast issues

--- a/style/_main.scss
+++ b/style/_main.scss
@@ -27,6 +27,10 @@ fieldset {
         padding: 2rem 2rem;
         position: relative;
 
+        .bill-label {
+            color: #46585D;
+        }
+
         .error_style {
             border: 2px solid hsl(356, 100%, 66%);
             transition: .2s;
@@ -82,7 +86,7 @@ fieldset {
         gap: .5rem;
 
         .select_tip {
-            color: $dark-grayish-cyan;
+            color: #46585D;
         }
 
         .custom_tip {
@@ -118,6 +122,10 @@ fieldset {
     }
     .people_container {
         @extend .bill_container;
+        
+        .people-label {
+            color: #46585D;
+        }
 
         .person {
             @extend .dollar;
